Fix banner stretching on large desktop

--- a/app/assets/stylesheets/banners.scss
+++ b/app/assets/stylesheets/banners.scss
@@ -273,14 +273,14 @@ figure
     position: relative;
     @include rem-fallback(margin-bottom, 0.875);
     height: 250px;
-    @include respond-to(large_desktop) { height: 250px; @include rem-fallback(margin-bottom, 0.875); }
+    @include respond-to(large_desktop) { @include rem-fallback(height, 18.125); @include rem-fallback(margin-bottom, 1.375); }
     @include respond-to(tablet) { @include rem-fallback(height, 14.25); @include rem-fallback(margin-bottom, 0.75); }
     @include respond-to(handheld) { height: 10.5rem; @include rem-fallback(margin-top, 0.75); @include rem-fallback(margin-bottom, 0.75);} 
 
     img 
     {
       height: 250px;
-      @include respond-to(large_desktop) { height: 250px; width: 100%; }
+      @include respond-to(large_desktop) { @include rem-fallback(height, 18.125); width: 100%; }
       @include respond-to(tablet) { @include rem-fallback(height, 14.25); } 
       @include respond-to(handheld) { @include rem-fallback(height, 10.5); width: 100%; }
     }
@@ -312,11 +312,11 @@ figure
       @include rem-fallback(padding, 0.5, 0); 
       @include translucent_white;
       margin: 0;
-      @include rem-fallback(bottom, 3.75);
-      @include respond-to(handheld) { @include rem-fallback(font-size, 1.125); @include rem-fallback(bottom, 0.5);}
-        left: 0px;
-        right: 0px;
-        @include rem-fallback(padding, 0.25, 1, 0.25, 1);
+      left: 0px;
+      right: 0px;
+      @include rem-fallback(padding, 0.5, 1, 0.5, 1);
+      @include rem-fallback(bottom, 1.5);
+      @include respond-to(handheld) { @include rem-fallback(font-size, 1.125); @include rem-fallback(bottom, 0.5); @include rem-fallback(padding, 0.25, 1, 0.25, 1);}
       
       &.square 
       {
